--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "connected-react-router": "^6.9.3",
     "eslint": "8.22.0",
     "framer-motion": "^7.3.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
